--- a/style.css
+++ b/style.css
@@ -1,34 +1,54 @@
 *{
+    box-sizing: border-box;
     margin: 0;
     padding: 0;
     font-family: sans-serif;
+    scroll-behavior: smooth;
 }
 .banner{
     width: 100%;
     height: 100vh;
-    background-image: linear-gradient(rgba(0,0,0,0.75),rgba(0,0,0,0.75)),url(classroom.jpg);
+    background-image: linear-gradient(rgba(0,0,0,0.75),rgba(0, 0, 0, 0.75)),url(classroom.jpg);
     background-size: cover;
     background-position: center;
 }
 .navbar{
-    width: 85%;
+    background: linear-gradient(rgb(8, 0, 0),rgba(0,0,0,0));
+    height: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.5rem;
+    position: sticky;
+    top: 0;
+    z-index: 999;
+}
+.navbar_container{
+    width: 100%;
     margin: auto;
-    padding: 35px 0;
+    padding: 0 50px;
     display: flex;
     align-items: center;
+    z-index: 1;
+    max-width: 1900px;
     justify-content: space-between;
 }
 .logo{
     width: 170px;
     cursor: pointer;
 }
-.navbar ul li{
+.navbar_menu{
+    display: flex;
+    align-items: center;
+    list-style: none;
+}
+.navbar_container ul li{
     list-style: none;
     display: inline-block;
     margin: 0 20px;
     position: relative;
 }
-.navbar ul li a{
+.navbar_links{
     text-decoration: none;
     color: #fff;
     text-transform: uppercase;
