--- a/style.css
+++ b/style.css
@@ -5,6 +5,13 @@
     font-family: sans-serif;
     scroll-behavior: smooth;
 }
+
+.body{
+    margin: 0;
+    height: 100%;
+    overflow: hidden;
+}
+
 .banner{
     width: 100%;
     height: 100vh;
@@ -111,4 +118,16 @@
     margin-top: 15vh;
     height: 40vh;
     width: auto;
+}
+
+.content3{
+    width: 100%;
+    position: absolute;
+    top:15%;
+    text-align: center;
+    color: #fff;
+}
+
+.content3 h1{
+    font-size: 50px;
 }
