--- a/alfabetsPage.css
+++ b/alfabetsPage.css
@@ -3,13 +3,12 @@
     margin: 0;
     padding: 0;
     font-family: sans-serif;
-    scroll-behavior: smooth;
 }
-
 .body{
     margin: 0;
     height: 100%;
     overflow: hidden;
+    display: block;
 }
 
 .banner{
@@ -73,6 +72,7 @@
 .navbar ul li:hover::after{
     width: 100%;
 }
+
 .content{
     width: 100%;
     position: absolute;
@@ -81,89 +81,19 @@
     text-align: center;
     color: #fff;
 }
-.content h1{
-    font-size: 70px;
-    margin-top: 80px;
-}
-.content p{
-    margin: 20px auto;
-    font-weight: 100;
-    line-height: 25px;
-}
-.image{
-    margin-top: 15vh;
-    height: 40vh;
-    width: auto;
-}
-
-.content2{
-    width: 100%;
-    position: absolute;
-    top:50%;
-    transform: translateY(-50%);
-    text-align: center;
-    color: #fff;
-}
-.content2 h1{
-    font-size: 60px;
-    margin-top: 80px;
-}
-.content2 p{
-    margin: 20px auto;
-    font-weight: 100;
-    line-height: 15px;
-    font-size: xx-large;
-}
-.image{
-    margin-top: 15vh;
-    height: 40vh;
-    width: auto;
-}
-
-.content3{
-    width: 100%;
-    position: absolute;
-    top:15%;
-    text-align: center;
-    color: #fff;
-}
-
-.content3 h1{
-    font-size: 50px;
-}
-
 button{
-    width: 200px;
-    height: 55px;
+    width: 100px;
+    height: 75px;
     padding: 15px 0;
     text-align: center;
-    margin: 20px 10px;
+    margin:15px 25px;
     border-radius: 25px;
     font-weight: bold;
-    border: 2px solid #62DCF6;
+    font-size: x-large;
+    border: 2px solid #e5f662;
     background: transparent;
-    color:  #fff;
+    color:  rgb(255, 255, 0);
     cursor: pointer;
     position: relative;
     overflow: hidden;
-}
-
-span{
-    background: #62DCF6;
-    height: 100%;
-    width: 0;
-    border-radius: 25px;
-    position: absolute;
-    z-index: -1;
-    left: 0;
-    top: 0;
-    transition: 0.5s;
-}
-
-button:hover span{
-    width: 100%;
-}
-
-button:hover{
-    border: none;
 }
