--- a/homeLapa/homePage.css
+++ b/homeLapa/homePage.css
@@ -15,7 +15,7 @@
 .banner{
     width: 100%;
     height: 100vh;
-    background-image: linear-gradient(rgba(0,0,0,0.75),rgba(0, 0, 0, 0.75)),url(classroom.jpg);
+    background-image: linear-gradient(rgba(0,0,0,0.75),rgba(0, 0, 0, 0.75)),url(/Atteli/classroom.jpg);
     background-size: cover;
     background-position: center;
 }
@@ -94,42 +94,6 @@
     margin-top: 15vh;
     height: 40vh;
     width: auto;
-}
-
-.content2{
-    width: 100%;
-    position: absolute;
-    top:50%;
-    transform: translateY(-50%);
-    text-align: center;
-    color: #fff;
-}
-.content2 h1{
-    font-size: 60px;
-    margin-top: 80px;
-}
-.content2 p{
-    margin: 20px auto;
-    font-weight: 100;
-    line-height: 15px;
-    font-size: xx-large;
-}
-.image{
-    margin-top: 15vh;
-    height: 40vh;
-    width: auto;
-}
-
-.content3{
-    width: 100%;
-    position: absolute;
-    top:15%;
-    text-align: center;
-    color: #fff;
-}
-
-.content3 h1{
-    font-size: 50px;
 }
 
 button{
