--- a/videoLapa/videosPage.css
+++ b/videoLapa/videosPage.css
@@ -1,8 +1,19 @@
-*{
+/* *{
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    font-family: sans-serif;
+
+} */
+
+*{
+    -webkit-box-sizing: border-box;
+		-moz-box-sizing: border-box;
+		-ms-box-sizing: border-box;
+		-o-box-sizing: border-box;
+		box-sizing: border-box;
+		margin:0;
+		padding:0;
+        font-family: sans-serif;
 }
 .body{
     margin: 0;
@@ -14,7 +25,7 @@
 .banner{
     width: 100%;
     height: 100vh;
-    background-image: linear-gradient(rgba(0,0,0,0.75),rgba(0, 0, 0, 0.75)),url(classroom.jpg);
+    background-image: linear-gradient(rgba(0,0,0,0.75),rgba(0, 0, 0, 0.75)),url(/Atteli/classroom.jpg);
     background-size: cover;
     background-position: center;
 }
@@ -77,23 +88,69 @@
     width: 100%;
     position: absolute;
     top:50%;
-    transform: translateY(-50%);
+    transform: translateY(-55%);
     text-align: center;
     color: #fff;
+    height: 45em;
+    display: block;
+    overflow: hidden;
 }
-button{
-    width: 100px;
-    height: 75px;
-    padding: 15px 0;
+
+/* Additionnal styles */
+.video-slider {
+    width: 100%;
+    height: 20em;
+    background: #444;
+    /* transform: translateY(-50%); */
     text-align: center;
-    margin:15px 25px;
-    border-radius: 25px;
-    font-weight: bold;
-    font-size: x-large;
-    border: 2px solid #e5f662;
-    background: transparent;
-    color:  rgb(255, 255, 0);
-    cursor: pointer;
     position: relative;
     overflow: hidden;
+}
+.slide {
+    position: absolute;
+    top: 30%;
+    left: 100%;
+    height: 50%;
+    width: 50%;
+    text-align: center;
+    margin: 0 25%;
+    overflow: hidden;
+}
+.slide:first-child{
+    left: 0;
+}
+.video{
+    height: 100%;
+    width: 100%;
+    border:0;
+}
+.slide-arrow{
+    position: absolute;
+    top: 12%;
+    left: 0;
+    height: 45%;
+    width: 15%;
+    cursor: pointer;
+    opacity: .5;
+}
+.slide-arrow:hover{
+    opacity: 1;
+}
+.slide-arrow:after{
+    content: "\003c";
+    text-align: center;
+    display: block;
+    height: 10%;
+    width: 100%;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    font-size: 3em;
+}
+.slide-arrow.right:after{
+    content: "\003e";
+}
+.slide-arrow.right{
+    left: auto;
+    right: 0;
 }
