--- a/alfabetsLapa/alfabetsPage.css
+++ b/alfabetsLapa/alfabetsPage.css
@@ -76,7 +76,7 @@
 .content{
     width: 100%;
     position: absolute;
-    top:50%;
+    top:55%;
     transform: translateY(-50%);
     text-align: center;
     color: #fff;
@@ -90,10 +90,56 @@ button{
     border-radius: 25px;
     font-weight: bold;
     font-size: x-large;
-    border: 2px solid #e5f662;
-    background: transparent;
-    color:  rgb(255, 255, 0);
+    border: 2px solid #0000005e;
+    background: rgb(43, 123, 202);
+    color:  rgb(255, 255, 255);
     cursor: pointer;
     position: relative;
     overflow: hidden;
 }
+
+.tooltip {
+    text-decoration:none;
+    position:relative;
+  }
+
+  .tooltip h3{
+    top:5vh;
+  }
+   
+  .tooltip span {
+    display:none;
+    -moz-border-radius:6px;
+    -webkit-border-radius:6px;
+    border-radius:6px;
+    color:black;
+    background:white; 
+  }
+   
+  .tooltip span img {
+    float:center;
+    /* margin:0px 8px 8px 0; */
+    width: 100px;
+    height: 100px;
+
+  }
+   
+  .tooltip:hover span {
+    display:block;
+    text-align: center;
+    position:absolute;
+    font-size: xx-large;
+    top:0;
+    left:0;
+    z-index:1000;
+    width:350px;
+    max-width:320px;
+    min-height:160px;
+    border:1px solid black;
+    margin-top:12px;
+    margin-left:32px;
+    overflow:hidden;
+    padding:5vh;
+    border-radius: 35px;
+  }
+
