--- a/alfabetsLapa/alfabetsPage.css
+++ b/alfabetsLapa/alfabetsPage.css
@@ -76,7 +76,7 @@
 .content{
     width: 100%;
     position: absolute;
-    top:55%;
+    top:50%;
     transform: translateY(-50%);
     text-align: center;
     color: #fff;
@@ -102,44 +102,40 @@ button{
     text-decoration:none;
     position:relative;
   }
-
-  .tooltip h3{
-    top:5vh;
-  }
    
   .tooltip span {
     display:none;
     -moz-border-radius:6px;
     -webkit-border-radius:6px;
-    border-radius:6px;
+    border-radius:10px;
     color:black;
     background:white; 
   }
    
   .tooltip span img {
     float:center;
-    /* margin:0px 8px 8px 0; */
-    width: 100px;
-    height: 100px;
-
+    margin:0px 8px 8px 0;
+    width: 75px;
+    height: 75px;
   }
    
   .tooltip:hover span {
     display:block;
     text-align: center;
     position:absolute;
-    font-size: xx-large;
+    font-size: large;
     top:0;
     left:0;
     z-index:1000;
-    width:350px;
-    max-width:320px;
-    min-height:160px;
+    width: 250px;
+    height: 250px;
+    max-width:250px;
+    min-height:250px;
     border:1px solid black;
     margin-top:12px;
     margin-left:32px;
-    overflow:hidden;
-    padding:5vh;
+    /* overflow:hidden; */
+    padding:1vh;
     border-radius: 35px;
   }
 
