--- a/alfabetsLapa/alfabetsPage.css
+++ b/alfabetsLapa/alfabetsPage.css
@@ -84,13 +84,13 @@
 button{
     width: 100px;
     height: 75px;
-    padding: 15px 0;
+    padding: 1px 0;
     text-align: center;
     margin:15px 25px;
     border-radius: 25px;
     font-weight: bold;
     font-size: x-large;
-    border: 2px solid #0000005e;
+    border: 0px solid #0000005e;
     background: rgb(43, 123, 202);
     color:  rgb(255, 255, 255);
     cursor: pointer;
@@ -105,18 +105,18 @@ button{
    
   .tooltip span {
     display:none;
-    -moz-border-radius:6px;
-    -webkit-border-radius:6px;
-    border-radius:10px;
+    -moz-border-radius:3px;
+    -webkit-border-radius:3px;
+    border-radius:5px;
     color:black;
     background:white; 
   }
    
   .tooltip span img {
-    float:center;
-    margin:0px 8px 8px 0;
-    width: 75px;
-    height: 75px;
+    float:left;
+    /* margin:0px 8px 8px 0; */
+    width: 125px;
+    height: 125px;
   }
    
   .tooltip:hover span {
@@ -127,15 +127,59 @@ button{
     top:0;
     left:0;
     z-index:1000;
-    width: 250px;
-    height: 250px;
-    max-width:250px;
-    min-height:250px;
-    border:1px solid black;
-    margin-top:12px;
-    margin-left:32px;
-    /* overflow:hidden; */
-    padding:1vh;
-    border-radius: 35px;
+    width: 300px;
+    height: 175px;
+    /* max-width:140px;
+    min-height:100px; */
+    /* border:1px solid black; */
+    margin-top:-145px;
+
+    margin-left:75px;
+    overflow:hidden;
+    /* padding:.5vh; */
+    /* border-radius: 15px; */
   }
 
+
+
+  .tooltip2 {
+    text-decoration:none;
+    position:relative;
+  }
+   
+  .tooltip2 span {
+    display:none;
+    -moz-border-radius:3px;
+    -webkit-border-radius:3px;
+    border-radius:5px;
+    color:black;
+    background:white; 
+  }
+   
+  .tooltip2 span img {
+    float:left;
+    /* margin:0px 8px 8px 0; */
+    width: 125px;
+    height: 125px;
+  }
+   
+  .tooltip2:hover span {
+    display:block;
+    text-align: center;
+    position:absolute;
+    font-size: large;
+    top:0;
+    left:0;
+    z-index:1000;
+    width: 300px;
+    height: 175px;
+    /* max-width:140px;
+    min-height:100px; */
+    /* border:1px solid black; */
+    margin-top:-145px;
+
+    margin-left:-225px;
+    overflow:hidden;
+    /* padding:.5vh; */
+    /* border-radius: 15px; */
+  }
