--- a/gamesLapa/games/wordGame.css
+++ b/gamesLapa/games/wordGame.css
@@ -19,7 +19,7 @@
     background-image: linear-gradient(rgba(0,0,0,0.75),rgba(0, 0, 0, 0.75)),url(/Atteli/classroom.jpg);
     background-size: cover;
     background-position: center;
-    z-index: 10;
+    z-index: 15;
 }
 .navbar{
     background: linear-gradient(rgb(8, 0, 0),rgba(0,0,0,0));
@@ -30,7 +30,7 @@
     font-size: 1.5rem;
     position: sticky;
     top: 0;
-    z-index: 999;
+    z-index: 15;
 }
 .navbar_container{
     width: 100%;
@@ -41,7 +41,7 @@
     z-index: 1;
     max-width: 1900px;
     justify-content: space-between;
-    z-index: 999;
+    z-index: 15;
 }
 .logo{
     width: 170px;
@@ -90,6 +90,7 @@
     text-align: center;
     border-radius: 1em;
     z-index: 0;
+    visibility: hidden;
 }
 .controls-container {
     background-color: transparent;
@@ -101,7 +102,7 @@
     justify-content: center;
     flex-direction: column;
     top: 0;
-    z-index: 0;
+    z-index: 5;
 }
 #start {
     font-size: 1.2em;
