--- a/Templates/video.html
+++ b/Templates/video.html
@@ -5,20 +5,20 @@
         <meta name="viewport"
         content="width=device-width, initial-scale=1.0">
         <title>SOLS</title>
-        <link href="videosPage.css" rel="stylesheet" type="text/css"/>
+        <link href="static/videosPage.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
         <!-- Navigational Bar Section -->
         <div class="banner">
             <nav class="navbar">
                 <div class="navbar_container">
-                    <a href="/homeLapa/home.html"><img src="/Atteli/logo.png" class="logo"></a>
+                    <a href="/"><img src="static/logo.png" class="logo"></a>
                     <ul class="navbar_menu">
-                        <li><a href="/homeLapa/home.html" class="navbar_links" id="home-page">Mājas</a></li>
-                        <li><a href="/alfabetsLapa/alfabets.html" class="navbar_links" id="abc-page">Alfabēts</a></li>
-                        <li><a href="/gamesLapa/spelesLapa.html" class="navbar_links" id="game-page">Spēles</a></li>
-                        <li><a href="video.html" class="navbar_linksA" id="video-link">Video</a></li>
-                        <li><a href="/aboutLapa/par.html" class="navbar_links" id="about-link">Par</a></li>
+                        <li><a href="/" class="navbar_links" id="home-page">Mājas</a></li>
+                        <li><a href="/alfabets" class="navbar_links" id="abc-page">Alfabēts</a></li>
+                        <li><a href="/speles" class="navbar_links" id="game-page">Spēles</a></li>
+                        <li><a href="/video" class="navbar_linksA" id="video-link">Video</a></li>
+                        <li><a href="/par" class="navbar_links" id="about-link">Par</a></li>
                     </ul>
                 </nav>   
             </div>
