--- a/static/aboutPage.css
+++ b/static/aboutPage.css
@@ -15,7 +15,7 @@
 .banner{
     width: 100%;
     height: 100vh;
-    background-image: linear-gradient(rgba(0,0,0,0.75),rgba(0, 0, 0, 0.75)),url(/Atteli/classroom.jpg);
+    background-image: linear-gradient(rgba(0,0,0,0.75),rgba(0, 0, 0, 0.75)),url(classroom.jpg);
     background-size: cover;
     background-position: center;
 }
@@ -78,7 +78,7 @@
 .navbar ul li:hover::after{
     width: 100%;
 }
-.spele1{
+.content{
     width: 100%;
     position: absolute;
     top:50%;
@@ -86,36 +86,66 @@
     text-align: center;
     color: #fff;
 }
-.spele1 a{
-    justify-content: center;
-}
-.spele1 h1{
-    font-size: 70px;
+.content h1{
+    font-size: 60px;
     margin-top: 80px;
 }
-.spele1 p{
+.content p{
     margin: 20px auto;
     font-weight: 100;
-    line-height: 25px;
+    line-height: 15px;
+    font-size: xx-large;
 }
-.spele1 img{
-    width: 10%;
-    height: 10%;
-    align-items: center;
+.image{
+    margin-top: 15vh;
+    height: 40vh;
+    width: auto;
 }
-.spele1 button{
+
+.content3{
+    width: 100%;
+    position: absolute;
+    top:15%;
+    text-align: center;
+    color: #fff;
+}
+
+.content3 h1{
+    font-size: 50px;
+}
+
+button{
     width: 200px;
-    height: 75px;
+    height: 55px;
     padding: 15px 0;
     text-align: center;
     margin: 20px 10px;
     border-radius: 25px;
     font-weight: bold;
-    font-size: x-large;
-    /* border: 2px solid #62DCF6; */
-    background: #009bbe;
-    color:  #ffffff;
+    border: 2px solid #62DCF6;
+    background: transparent;
+    color:  #fff;
     cursor: pointer;
     position: relative;
     overflow: hidden;
+}
+
+span{
+    background: #62DCF6;
+    height: 100%;
+    width: 0;
+    border-radius: 25px;
+    position: absolute;
+    z-index: -1;
+    left: 0;
+    top: 0;
+    transition: 0.5s;
+}
+
+button:hover span{
+    width: 100%;
+}
+
+button:hover{
+    border: none;
 }
