--- a/static/videosPage.css
+++ b/static/videosPage.css
@@ -1,21 +1,31 @@
-*{
+/* *{
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    font-family: sans-serif;
-    scroll-behavior: smooth;
-}
 
+} */
+
+*{
+    -webkit-box-sizing: border-box;
+		-moz-box-sizing: border-box;
+		-ms-box-sizing: border-box;
+		-o-box-sizing: border-box;
+		box-sizing: border-box;
+		margin:0;
+		padding:0;
+        font-family: sans-serif;
+}
 .body{
     margin: 0;
     height: 100%;
     overflow: hidden;
+    display: block;
 }
 
 .banner{
     width: 100%;
     height: 100vh;
-    background-image: linear-gradient(rgba(0,0,0,0.75),rgba(0, 0, 0, 0.75)),url(/Atteli/classroom.jpg);
+    background-image: linear-gradient(rgba(0,0,0,0.75),rgba(0, 0, 0, 0.75)),url(classroom.jpg);
     background-size: cover;
     background-position: center;
 }
@@ -78,74 +88,74 @@
 .navbar ul li:hover::after{
     width: 100%;
 }
+
 .content{
     width: 100%;
     position: absolute;
     top:50%;
-    transform: translateY(-50%);
+    transform: translateY(-55%);
     text-align: center;
     color: #fff;
-}
-.content h1{
-    font-size: 60px;
-    margin-top: 80px;
-}
-.content p{
-    margin: 20px auto;
-    font-weight: 100;
-    line-height: 15px;
-    font-size: xx-large;
-}
-.image{
-    margin-top: 15vh;
-    height: 40vh;
-    width: auto;
-}
-
-.content3{
-    width: 100%;
-    position: absolute;
-    top:15%;
-    text-align: center;
-    color: #fff;
-}
-
-.content3 h1{
-    font-size: 50px;
-}
-
-button{
-    width: 200px;
-    height: 55px;
-    padding: 15px 0;
-    text-align: center;
-    margin: 20px 10px;
-    border-radius: 25px;
-    font-weight: bold;
-    border: 2px solid #62DCF6;
-    background: transparent;
-    color:  #fff;
-    cursor: pointer;
-    position: relative;
+    height: 45em;
+    display: block;
     overflow: hidden;
 }
 
-span{
-    background: #62DCF6;
-    height: 100%;
-    width: 0;
-    border-radius: 25px;
-    position: absolute;
-    z-index: -1;
-    left: 0;
-    top: 0;
-    transition: 0.5s;
-}
-
-button:hover span{
+/* Additionnal styles */
+.video-slider {
     width: 100%;
+    height: 20em;
+    background: #444;
+    /* transform: translateY(-50%); */
+    text-align: center;
+    position: relative;
+    overflow: hidden;
 }
-
-button:hover{
-    border: none;
+.slide {
+    position: absolute;
+    top: 30%;
+    left: 100%;
+    height: 50%;
+    width: 50%;
+    text-align: center;
+    margin: 0 25%;
+    overflow: hidden;
+}
+.slide:first-child{
+    left: 0;
+}
+.video{
+    height: 100%;
+    width: 100%;
+    border:0;
+}
+.slide-arrow{
+    position: absolute;
+    top: 12%;
+    left: 0;
+    height: 45%;
+    width: 15%;
+    cursor: pointer;
+    opacity: .5;
+}
+.slide-arrow:hover{
+    opacity: 1;
+}
+.slide-arrow:after{
+    content: "\003c";
+    text-align: center;
+    display: block;
+    height: 10%;
+    width: 100%;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    font-size: 3em;
+}
+.slide-arrow.right:after{
+    content: "\003e";
+}
+.slide-arrow.right{
+    left: auto;
+    right: 0;
 }
