--- a/Templates/memoryGame.html
+++ b/Templates/memoryGame.html
@@ -5,15 +5,15 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Atmiņas Spēle</title>
-        <link rel="stylesheet" href="static/memoryGame.css">
-        <script src="static/memorygame.js" defer></script>
+        <link rel="stylesheet" href="static/css/memoryGame.css">
+        <script src="static/js/memorygame.js" defer></script>
     </head>
     <body>
         <!-- Navigational Bar Section -->
         <div class="banner">
             <nav class="navbar">
                 <div class="navbar_container">
-                    <a href="/"><img src="static/logo.png" class="logo"></a>
+                    <a href="/"><img src="static/images/logo.png" class="logo"></a>
                     <ul class="navbar_menu">
                         <li><a href="/" class="navbar_links" id="home-page">Mājas</a></li>
                         <li><a href="/alfabets" class="navbar_links" id="abc-page">Alfabēts</a></li>
