--- a/Templates/par.html
+++ b/Templates/par.html
@@ -5,14 +5,14 @@
         <meta name="viewport"
         content="width=device-width, initial-scale=1.0">
         <title>SOLS</title>
-        <link href="static/aboutPage.css" rel="stylesheet" type="text/css"/>
+        <link href="static/css/aboutPage.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
         <!-- Navigational Bar Section -->
         <div class="banner">
             <nav class="navbar">
                 <div class="navbar_container">
-                    <a href="/"><img src="static/logo.png" class="logo"></a>
+                    <a href="/"><img src="static/images/logo.png" class="logo"></a>
                     <ul class="navbar_menu">
                         <li><a href="/" class="navbar_links" id="home-page">Mājas</a></li>
                         <li><a href="/alfabets" class="navbar_links" id="abc-page">Alfabēts</a></li>
@@ -25,7 +25,7 @@
         </div>
 
         <div class="content">
-            <a><img src="static/image1.png" class="image"></a>
+            <a><img src="static/images/image1.png" class="image"></a>
             <h1>Programmēšana I<br>6. tēmas ietvaros</h1>
             <p>Projekta veidotājs - Aleksis Počs</p>
         </div>
