--- a/Templates/wordGame.html
+++ b/Templates/wordGame.html
@@ -10,15 +10,15 @@
             href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap"
             rel="stylesheet"
         />
-        <link rel="stylesheet" href="static/wordGame.css">
-        <script src="static/wordGame.js" defer></script>
+        <link rel="stylesheet" href="static/css/wordGame.css">
+        <script src="static/js/wordGame.js" defer></script>
     </head>
     <body>
         <!-- Navigational Bar Section -->
         <div class="banner">
             <nav class="navbar">
                 <div class="navbar_container">
-                    <a href="/"><img src="static/logo.png" class="logo"></a>
+                    <a href="/"><img src="static/images/logo.png" class="logo"></a>
                     <ul class="navbar_menu">
                         <li><a href="/" class="navbar_links" id="home-page">Mājas</a></li>
                         <li><a href="/alfabets" class="navbar_links" id="abc-page">Alfabēts</a></li>
