--- a/Templates/spelesLapa.html
+++ b/Templates/spelesLapa.html
@@ -5,14 +5,14 @@
         <meta name="viewport"
         content="width=device-width, initial-scale=1.0">
         <title>SOLS</title>
-        <link href="static/speles.css" rel="stylesheet" type="text/css"/>
+        <link href="static/css/speles.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
         <!-- Navigational Bar Section -->
         <div class="banner">
             <nav class="navbar">
                 <div class="navbar_container">
-                    <a href="/"><img src="static/logo.png" class="logo"></a>
+                    <a href="/"><img src="static/images/logo.png" class="logo"></a>
                     <ul class="navbar_menu">
                         <li><a href="/" class="navbar_links" id="home-page">Mājas</a></li>
                         <li><a href="/alfabets" class="navbar_links" id="abc-page">Alfabēts</a></li>
@@ -26,8 +26,8 @@
 
         <div class="spele1">
             <div>
-                <a href="/atminasSpele"><button type="button"><span></span>Atmiņas Spēle</button><img src="static/Think.png" class="MemoryGameLogo"></a>
-                <a href="/miniVardu"><button type="button"><span></span>Mini vārdu!</button><img src="static/Map.png" class="WordGameLogo"></a>
+                <a href="/atminasSpele"><button type="button"><span></span>Atmiņas Spēle</button><img src="static/images/Think.png" class="MemoryGameLogo"></a>
+                <a href="/miniVardu"><button type="button"><span></span>Mini vārdu!</button><img src="static/images/Map.png" class="WordGameLogo"></a>
             </div>
         </div>
 
