--- a/Templates/video.html
+++ b/Templates/video.html
@@ -5,14 +5,14 @@
         <meta name="viewport"
         content="width=device-width, initial-scale=1.0">
         <title>SOLS</title>
-        <link href="static/videosPage.css" rel="stylesheet" type="text/css"/>
+        <link href="static/css/videosPage.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
         <!-- Navigational Bar Section -->
         <div class="banner">
             <nav class="navbar">
                 <div class="navbar_container">
-                    <a href="/"><img src="static/logo.png" class="logo"></a>
+                    <a href="/"><img src="static/images/logo.png" class="logo"></a>
                     <ul class="navbar_menu">
                         <li><a href="/" class="navbar_links" id="home-page">Mājas</a></li>
                         <li><a href="/alfabets" class="navbar_links" id="abc-page">Alfabēts</a></li>
